# sispmctl

./: .gitignore  AUTHORS  ChangeLog  Maintain  Makefile.am  Makefile.in  README  README.md  README.rst  autogen.sh  config.h.in  configure  configure.ac  configure.in  meson.build
admin/: bootstrap
debian/: changelog  control  copyright  rules  sispmctl.lintian-overrides  sispmctl4.postinst  sispmctl4.udev  watch
doc/: eg-pms2.rst
examples/: sispmctl.service
extras/: Makefile.am  README  addheader  sispm.py  sispmapplet.e3p  sispmapplet.e3t  sispmapplet.py  sispmform.ui
extras/gemplug/: 74-sispmctl.rules  Makefile  gemplug  gemplug-completion.sh  gemplug.1  install.sh  last_sispmctl_S
htdocs/: index-2011-03-30.html  index-2018-11-18.html  index-2023-06-28.html  index.html  sispm
htdocs/css/: default.css
man/: Makefile.in  sispmctl.1
snap/: snapcraft.yaml
src/: .gitignore  Makefile.am  Makefile.in  main.c  main.h  nethelp.c  nethelp.h  onoff.fig  process.c  schedule.c  sispm_ctl.c  sispm_ctl.h  sispmctl.1  sispmctl.h  socket.c  socket.h  usb.c
src/web1/: index.html
src/web2/: index.html  style.css
src/web3/: index.html
